adding layers using StackPane for the various elements